@@ -1,3 +1,9 @@
+Sun May  9 01:57:17 2004  Matthias Clasen  <maclas@gmx.de>
+
+	* gtk/gtkcombobox.c (gtk_combo_box_list_button_released): 
+	In list mode, accept the same mouse/wheel bindings on 
+	the cellview as on the button.  (#136967)
+
 Sun May  9 01:29:46 2004  Matthias Clasen  <maclas@gmx.de>
 
 	Merge from HEAD:
